# TrailblazerML

./: .gitignore  DOCKER.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: -milestone_name-----feature_name-.md  bug_template.yaml  feature_template.yaml
.github/workflows/: black.yml
ROS_src/: README.md  entrypoint.sh
scripts/: dowload_rover_stl.sh  venv.sh
src/: NavigateToGPS.action  README.md  README_CAMERA.md  go_autonomy.py  logic_mission.py  main.py  navigate_on_gps.py  requirements.txt  simulation_loop.py  symulation_loop.py
src/algorithm/: navigation_algorithm.py
src/api/: main_api.py
src/communication/: stm_com.py
src/depth-camera/: CMakeLists.txt  package.xml
src/gazebo_rviz/: package.xml
src/gps/: gps2sector.py  reading_gps.py
src/knmlprz_microRos/: README.md
src/log/: latest_build
src/logic_mission/: logic_mission.py  satelite_test.py  satellite_communicator.py
src/map2d/: pcd2track.py  translator.py
src/ros2_wall_follower/: CMakeLists.txt  README.md  package.xml
src/trailblazer_backup_scan/: package.xml  setup.cfg  setup.py
src/trailblazer_bringup/: README.md
src/trailblazer_cloud/: CMakeLists.txt  README.md
src/trailblazer_controller/: package.xml
src/trailblazer_description/: README.md  package.xml  setup.py
src/trailblazer_detections/: README.md  package.xml  setup.py
src/trailblazer_docker/: README.md
src/trailblazer_ekf/: package.xml  setup.cfg  setup.py
src/trailblazer_gazebo/: README.md  setup.py
src/trailblazer_gps/: README.md  package.xml  setup.cfg  setup.py
src/trailblazer_interfaces/: CMakeLists.txt  package.xml
src/trailblazer_joystick/: package.xml
src/trailblazer_master/: package.xml  setup.cfg  setup.py
src/trailblazer_nav2/: README.md  package.xml  setup.py
src/trailblazer_oak/: package.xml
(+245 files in other folders)
