[tool.poetry]
name = "trailblazerml"
version = "0.1.0"
description = "RoverGO"
authors = ["Kleczyk <danielkleczynski@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0"
open3d = "^0.18.0"
scikit-learn = "^1.5.0"
PyYAML = "^6.0.1"
addict = "^2.4.0"
pillow = "^10.3.0"
pandas = "^2.2.2"
tqdm = "^4.66.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
