[tool.poetry]
name = "trailblazerml"
version = "0.1.0"
description = "RoverGO"
authors = ["Kleczyk <danielkleczynski@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0"
open3d = "^0.18.0"
scikit-learn = "^1.5.0"
PyYAML = "^6.0.1"
addict = "^2.4.0"
pandas = "^2.2.2"
tqdm = "^4.66.4"
opencv-contrib-python = "^4.9.0.80"
depthai = "^2.26.0"
blobconverter = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
