[tool.poetry]
name = "trailblazerml"
version = "0.1.0"
description = "RoverGO"
authors = ["Kleczyk <danielkleczynski@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0"
open3d = "^0.18.0"
scikit-learn = "^1.5.0"
PyYAML = "^6.0.1"
addict = "^2.4.0"
pandas = "^2.2.2"
tqdm = "^4.66.4"
opencv-contrib-python = "^4.9.0.80"
depthai = "^2.26.0"
blobconverter = "^1.4.3"
pillow = "^10.3.0"
click = "^8.1.7"
matplotlib = "^3.9.0"
pyserial = "^3.5"
fastapi = "^0.111.0"
pydantic = "^2.8.2"
uvicorn = "^0.30.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
